# rc-engineer-app

./: .env.example  .gitignore  .vercelignore  AGENTS.md  DEPLOYMENT.md  capacitor.config.ts  eslint.config.mjs  next-types-validator-shim.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
ProDoc_PCB1_2026-05-12/: project.json
backups/: setup-calibrations-2026-03-31T01-36-00-035Z.json
capacitor-www/: index.html
docs/: ENGINEER_CHANGELOG.md  ENGINEER_FEEDBACK_LOG.md  ENGINEER_ITERATION.md  MIGRATION_SINGLE_USER.md  PERFORMANCE.md  PRODUCT_NORTH_STAR.md  TEAMS_PILOT.md  TEAMS_POST_PILOT_HARDENING.md  TESTFLIGHT.md  USER_FEEDBACK_BACKLOG.md  VEHICLE_DYNAMICS_PHYSICS_KB_ROADMAP.md  VISUAL_NORTH_STAR.md  cross-account-setup-sharing.md  engineer-stats-phase-2-3-spec.md
prisma/: dev-backup-before-object-bug-check.db  schema.prisma  seed.ts
scripts/: _backfill-run-sort-at.sql  backfill-setup-documents-car-id.ts  backfill-tire-types.ts  build-kb-chunk-index.cjs  check-legacy-local-user.ts  compare-mtc3-pdfs.mjs  dedupe-events.ts  dedupe-setup-sheet-models.ts  export-setup-calibrations.mjs  generate-spring-rate-lookup-table.mjs  implement-track-gps-p1.cjs  implement-track-gps-p2.cjs  implement-track-gps-p3.cjs  implement-track-gps-p4.cjs  (+12 more)
video-analysis/: README.md  pyproject.toml  requirements.txt
video-analysis/examples/: config.example.json  transponder.example.csv
video-analysis/rc_video_analysis/: __init__.py  __main__.py  align.py  analyze.py  cli.py  geometry.py  tracker.py  validate.py
(+1018 files in other folders)
